--- a/pom.xml
+++ b/pom.xml
@@ -238,7 +238,10 @@
           <version>2.1</version>
           <configuration>
             <port>80</port>
-            <path>/</path>
+            <path>/homepage</path>
+            <username>tomcat</username>
+            <password>tomcat</password>
+            <url>http://graydove.cn:8080/manager/text</url>
           </configuration>
         </plugin>
 
