--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/homepage?useSSL=false&serverTimezone=Asia/Shanghai
 jdbc.username=root
-jdbc.password=Du87688524
+jdbc.password=123456
